CodeJB/log/err.txt
Info in <TUnixSystem::ACLiC>: creating shared library /home/smjoblan/iTHEPHY/iTHEPHY/CodeJB/./data_cc.so
In file included from input_line_11:6:
././data.cc:133:101: error: use of undeclared identifier 'sig_yield_2'
  RooAddPdf *model_pos = new RooAddPdf("model_pos", "model_pos", RooArgList(*sig, *arg),RooArgList(*sig_yield_2, *bkg_yield_2));
                                                                                                    ^
././data.cc:135:76: error: use of undeclared identifier 'nThreads'
  RooAbsReal* nll_neg = model_neg->createNLL(*dataset1, Extended(), NumCPU(nThreads), RooFit::PrintLevel(-1), RooFit::PrintEvalErrors(-1));
                                                                           ^
././data.cc:138:76: error: use of undeclared identifier 'nThreads'
  RooAbsReal* nll_pos = model_pos->createNLL(*dataset2, Extended(), NumCPU(nThreads), RooFit::PrintLevel(-1), RooFit::PrintEvalErrors(-1));
                                                                           ^
././data.cc:141:106: error: use of undeclared identifier 'sig_yield_2'
  RooStats::SPlot *sData2 = new RooStats::SPlot("sData2", "An SPlot2", *dataset2, model_pos, RooArgList(*sig_yield_2, *bkg_yield_2));
                                                                                                         ^
Error in <ACLiC>: Dictionary generation failed!
